--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,1 +1,22 @@
-HELLOW WORLD
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>0-index.html</title>
+    </head>
+    <body style="margin: 0; padding: 0">
+        <header style="background-color: #FF0000; height: 70px; width: 100%;"></header>
+        <footer style="
+            background-color: #00FF00;
+            height: 60px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #000000">
+            Best School
+        </footer>
+        
+    </body>
+</html>
