--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
         <link rel="stylesheet" href="styles/5-filters.css">
-        <link rel="icon" href="images/icon.png" />
+        <link rel="icon" href="images/icon.png">
     </head>
     <body>
         <header>
-            <img src = "images/logo.png"/>
+            <div class="logo"></div>
         </header>
         <div class="container">
             <section class="filters">
